[tool.poetry]
name = "carrier-thermostat-controller"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "3.13.*"
loguru = "*"
carrier-api = "*"
aiohttp = "*"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
